# agent1

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  code.ipynb  executed.ipynb  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  python-ci.yml
docs/: STRUCTURE.md
scripts/: clean-repo.ps1  ollama-test.ps1  run-tests.ps1  setup-venv.ps1  start-notebook.ps1
sidekick/: __init__.py  api.py  config.py  connectors.py  engine.py  graph.py  llm.py  memory.py  schemas.py  tools.py
sidekick/static/: index.html
tests/: test_smoke.py
