[project]
name = "sidekick"
version = "0.1.0"
description = "A proactive personal agent with a three-scope memory layer."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3",
    "langgraph-checkpoint>=2",
    "openai>=1.40",
    "chromadb>=0.5",
    "apscheduler>=3.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.13.4",
    "pydantic-settings>=2",
    "python-dotenv>=1",
    "icalendar>=5",
    "recurring-ical-events>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: tests that need a real local model (Ollama); skipped in CI",
]
